--- a/Blueprint/onboarding.html
+++ b/Blueprint/onboarding.html
@@ -23,7 +23,7 @@
            <div class="search-box">
                <input class="search-txt" type="text" placeholder="Type to search">
                <a class="search-btn" href="#">
-
+                    <i class="fas fa-search"></i>
                </a>
         </div>
         </div>
