altered the layout accordint to invision prototype

--- a/Blueprint/onboarding.html
+++ b/Blueprint/onboarding.html
@@ -15,17 +15,12 @@
     <div class="slider">
         <div class="slide">
             <div class="circle" id="welcome"></div>
-            <h1>Beginners guide</h1>
-            <p>Search for jargons that u dont understand</p>
+            <h1>Getting Started</h1>
+            <p>Great to have you on board! <br>Feel free to explore, or get a head start below</p>
         </div>
         <div class="slide">
-           <h1>this is the search bar page</h1>
-           <div class="search-box">
-               <input class="search-txt" type="text" placeholder="Type to search">
-               <a class="search-btn" href="#">
-                    <i class="fas fa-search"></i>
-               </a>
-        </div>
+            <h1>this is the search bar page</h1>
+
         </div>
         <!-- <div class="slide">
         <div class="circle" id="all-set"></div>
@@ -53,3 +48,10 @@
 </body>
 
 </html>
+
+            <!-- <div class="search-box">
+               <input class="search-txt" type="text" placeholder="Type to search">
+               <a class="search-btn" href="#">
+                    <i class="fas fa-search"></i>
+               </a>
+        </div> -->
