completed the skippable user guide

--- a/Blueprint/onboarding.html
+++ b/Blueprint/onboarding.html
@@ -14,19 +14,28 @@
     <img src="./img/Garage.png" class="garage-logo" />
     <div class="slider">
         <div class="slide">
-            <div class="circle" id="welcome"></div>
             <h1>Getting Started</h1>
             <p>Great to have you on board! <br>Feel free to explore, or get a head start below</p>
         </div>
         <div class="slide">
-            <h1>this is the search bar page</h1>
-
+            <div class="column left ">
+                <img src="img/search.PNG">
+            </div>
+            <div class="column right" id="guide-text">
+                <h3>Search</h3>
+                <p>Look up definations,<br>synonyms, words<br>origins and <br>etymologies here</p>
+            </div>
         </div>
-        <!-- <div class="slide">
-        <div class="circle" id="all-set"></div>
-        <h1>All set</h1>
-        <p>Cut through the clutter of endless news updates & discover what matters, when it matters. Read with a new focus.</p>
-      </div> -->
+        <div class="slide">
+            <div class="column left">
+                <img src="img/news.PNG">
+            </div>
+            <div class="column right" id="guide-text">
+                <h3>Related Articles</h3>
+                <p>Find a list of articles<br>curated based on your<br>past reads here
+                </p>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <div class="arrow">
@@ -35,7 +44,7 @@
         <div class="dots">
             <div class="dot fill"></div>
             <div class="dot"></div>
-            <!-- <div class="dot"></div> -->
+            <div class="dot"></div>
         </div>
         <!-- <div class="skip">
             <div id="skip">SKIP</div>
@@ -49,7 +58,7 @@
 
 </html>
 
-            <!-- <div class="search-box">
+<!-- <div class="search-box">
                <input class="search-txt" type="text" placeholder="Type to search">
                <a class="search-btn" href="#">
                     <i class="fas fa-search"></i>
