added the checklist to the welcome page too

--- a/Blueprint/onboarding.html
+++ b/Blueprint/onboarding.html
@@ -36,6 +36,17 @@
                 </p>
             </div>
         </div>
+
+        <div class="slide">
+            <div class="column left">
+                <img src="img/checklist.PNG">
+            </div>
+            <div class="column right" id="guide-text">
+                <h3>Checklist</h3>
+                <p>Add your favourite<br>articles here to read<br>at your own pace
+                </p>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <div class="arrow">
@@ -43,6 +54,7 @@
         </div>
         <div class="dots">
             <div class="dot fill"></div>
+            <div class="dot"></div>
             <div class="dot"></div>
             <div class="dot"></div>
         </div>
