--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -3,6 +3,7 @@
   <head>
     <title>TNP Playlist</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/d60dc9f679.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="common.css" />
     <link rel="stylesheet" type="text/css" href="home.css" />
   </head>
@@ -17,6 +18,14 @@
         <a class="button" href="#" id="search">Search</a>
         <a class="button" href="#" id="related-news">Related News</a>
         <a class="button" href="#" id="checklist">Checklist</a>
+    </div>
+
+
+    <div class="search-box">
+        <input class="search-txt" type="text" name="" placeholder="Type to search">
+        <a class="search-btn" href="#">
+            <i class="fas fa-search"></i>
+        </a>
     </div>
     <!-- <script src="json/breaking.js"></script>
     <script src="home.js"></script> -->
