finish the basic functionality for defination search

--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>TNP Playlist</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d60dc9f679.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="common.css" />
     <link rel="stylesheet" type="text/css" href="home.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- HEADER -->
     <div class="header">
-      <img id="close-icon" src="./img/delete.png">
-      <img src="./img/Garage.png" class="garage-logo" />
+        <img id="close-icon" src="./img/delete.png">
+        <img src="./img/Garage.png" class="garage-logo" />
     </div>
 
     <div class="section">
@@ -19,15 +21,36 @@
         <a class="button" href="#" id="related-news">Related News</a>
         <a class="button" href="#" id="checklist">Checklist</a>
     </div>
-
-
     <div class="search-box">
         <input class="search-txt" type="text" name="" placeholder="Type to search">
         <a class="search-btn" href="#">
             <i class="fas fa-search"></i>
         </a>
     </div>
-    <!-- <script src="json/breaking.js"></script>
-    <script src="home.js"></script> -->
-  </body>
+
+    <div class="defination">
+        <div class="investopedia">
+            <div class="defination">
+                <h2>Defination</h2>
+                <p>
+                    explaination here
+                </p>
+            </div>
+        </div>
+        <div class="dictionary">
+            <div class="defination">
+                <h2>Defination</h2>
+                <p>
+                    explaination here
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="json/investopedia.js"></script>
+    <script src="json/dictionary.js"></script>
+    <script src="home.js"></script>
+</body>
+
 </html>
