able to pass search result variable over, also made a general outline of the related articles page

--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TNP Playlist</title>
+    <title>HOME</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/d60dc9f679.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="common.css" />
