--- a/Blueprint/relatedNews.html
+++ b/Blueprint/relatedNews.html
@@ -30,58 +30,55 @@
         </a>
 
         <div class="content">
-            <div class="row">
-                <div class="column left small">
-                    <div class="tile">
-                        <img src="${stories[1].img_src || placeholder}">
-                        <a href="${stories[1].url}" class="headline-small" target="_blank">
-                            ${stories[1].headline}
-                        </a>
-                        <div class="lead-small">
-                            ${stories[1].standfirst || stories[1].lead}
-                        </div>
-                        <a href="${stories[1].url}" class="read small margin-top" target="_blank">READ</a>
+            <div class="column left small">
+                <!-- <div class="tile">
+                    <img src="${stories[1].img_src || placeholder}">
+                    <a href="${stories[1].url}" class="headline-small" target="_blank">
+                        ${stories[1].headline}
+                    </a>
+                    <div class="lead-small">
+                        ${stories[1].standfirst || stories[1].lead}
                     </div>
-                    <div class="tile">
-                        <img src="${stories[3].img_src || placeholder}">
-                        <a href="${stories[3].url}" class="headline-small" target="_blank">
-                            ${stories[3].headline}
-                        </a>
-                        <div class="lead-small">
-                            ${stories[3].standfirst || stories[3].lead}
-                        </div>
-                        <a href="${stories[3].url}" class="read small margin-top" target="_blank">READ</a>
-                    </div>
+                    <a href="${stories[1].url}" class="read small margin-top" target="_blank">READ</a>
                 </div>
-                <div class="verticle-line"></div>
-                <div class="column right small">
-                    <div class="tile">
-                        <img src="${stories[2].img_src || placeholder}">
-                        <a href="${stories[2].url}" class="headline-small" target="_blank">
-                            ${stories[2].headline}
-                        </a>
-                        <div class="lead-small">
-                            ${stories[2].standfirst || stories[2].lead}
-                        </div>
-                        <a href="${stories[2].url}" class="read small margin-top" target="_blank">READ</a>
+                <div class="tile">
+                    <img src="${stories[3].img_src || placeholder}">
+                    <a href="${stories[3].url}" class="headline-small" target="_blank">
+                        ${stories[3].headline}
+                    </a>
+                    <div class="lead-small">
+                        ${stories[3].standfirst || stories[3].lead}
                     </div>
-                    <div class="tile">
-                        <img src="${stories[4].img_src || placeholder}">
-                        <a href="${stories[4].url}" class="headline-small" target="_blank">
-                            ${stories[4].headline}
-                        </a>
-                        <div class="lead-small">
-                            ${stories[4].standfirst || stories[4].lead}
-                        </div>
-                        <a href="${stories[4].url}" class="read small margin-top" target="_blank">READ</a>
+                    <a href="${stories[3].url}" class="read small margin-top" target="_blank">READ</a>
+                </div> -->
+            </div>
+            <div class="verticle-line"></div>
+            <div class="column right small">
+                <!-- <div class="tile">
+                    <img src="${stories[2].img_src || placeholder}">
+                    <a href="${stories[2].url}" class="headline-small" target="_blank">
+                        ${stories[2].headline}
+                    </a>
+                    <div class="lead-small">
+                        ${stories[2].standfirst || stories[2].lead}
                     </div>
+                    <a href="${stories[2].url}" class="read small margin-top" target="_blank">READ</a>
                 </div>
+                <div class="tile">
+                    <img src="${stories[4].img_src || placeholder}">
+                    <a href="${stories[4].url}" class="headline-small" target="_blank">
+                        ${stories[4].headline}
+                    </a>
+                    <div class="lead-small">
+                        ${stories[4].standfirst || stories[4].lead}
+                    </div>
+                    <a href="${stories[4].url}" class="read small margin-top" target="_blank">READ</a>
+                </div> -->
             </div>
         </div>
     </div>
 
-    <!-- <script src="json/investopedia.js"></script>
-    <script src="json/dictionary.js"></script> -->
+    <script src="json/relatedNewsJson.js"></script>
     <script src="relatedNews.js"></script>
 </body>
 
