latest working copy

--- a/Blueprint/relatedNews.html
+++ b/Blueprint/relatedNews.html
@@ -31,6 +31,12 @@
 
         <div class="content">
             <div class="column left small">
+                <div class="tile">
+                    <img >
+                    <a class="headline-small" ></a>
+                    <button class="add small margin-top" target="_blank"></button>
+                    </button>
+                </div>
                 <!-- <div class="tile">
                     <img src="${stories[1].img_src || placeholder}">
                     <a href="${stories[1].url}" class="headline-small" target="_blank">
@@ -54,6 +60,12 @@
             </div>
             <div class="verticle-line"></div>
             <div class="column right small">
+                <div class="tile">
+                    <img >
+                    <a class="headline-small" ></a>
+                    <button class="add small margin-top" target="_blank"></button>
+                    </button>
+                </div>
                 <!-- <div class="tile">
                     <img src="${stories[2].img_src || placeholder}">
                     <a href="${stories[2].url}" class="headline-small" target="_blank">
