all functions working

--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -24,7 +24,7 @@
         </tr>
     </table>
     <div class="search-box">
-        <div class="item">
+        <!-- <div class="item">
             <img id="checklist-delete" src="./img/delete.png">
             <input type="checkbox" id="item1" name="item1" value="item1">
             <label for="item1">item1</label>
@@ -34,7 +34,7 @@
             <img id="checklist-delete" src="./img/delete.png">
             <input type="checkbox" id="item2" name="item2" value="item2">
             <label for="item2">item2</label>
-        </div>
+        </div> -->
     </div>
 
     <!-- <script src="json/relatedNewsJson.js"></script> -->
