edited definition and explanation word

--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -40,9 +40,9 @@
         <div class="tab-panel investopedia">
             <div class="investopedia">
                 <div class="defination">
-                    <h2>Defination</h2>
+                    <h2>Definition</h2>
                     <p>
-                        explaination here
+                        explanation here
                     </p>
                 </div>
             </div>
@@ -50,9 +50,9 @@
         <div class="tab-panel dictionary">
             <div class="dictionary">
                 <div class="defination">
-                    <h2>Defination</h2>
+                    <h2>Definition</h2>
                     <p>
-                        explaination here
+                        explanation here
                     </p>
                 </div>
     
