update button css

--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -18,9 +18,18 @@
 
     <table class="section">
         <tr>
-            <td><a class="button" href="#" id="search">Search</a></td>
-            <td><a class="button" href="#" id="related-news">Related News</a></td>
-            <td><a class="button" href="#" id="checklist">Checklist</a></td>
+            <td><a class="button" href="#" id="search">
+                <img src="./img/icons/search.png" class="menu_image">
+            </a></td>
+            <td><a class="button" href="#" id="related-news">
+                <img src="./img/icons/relatedArticles.png" class="menu_image">
+            </a></td>
+            <td><a class="button" href="#" id="checklist">
+                <img src="./img/icons/checklist.png" class="menu_image">
+            </a></td>
+            <td><a class="button" href="#" id="my-folder">
+                <img src="./img/icons/myFolders.png" class="menu_image">
+            </a></td>
         </tr>
     </table>
     <div class="search-box">
