--- a/Blueprint/relatedNews.html
+++ b/Blueprint/relatedNews.html
@@ -100,6 +100,7 @@
     </div>
 
     <script src="json/relatedNewsJson.js"></script>
+    <script src="json/images.js"></script>
     <script src="relatedNews.js"></script>
 </body>
 
