able to generate header for the categories

--- a/Blueprint/category.html
+++ b/Blueprint/category.html
@@ -35,6 +35,9 @@
     <div class="category-box">
         <!-- Trigger/Open The Modal -->
         <button id="myBtn">+CREATE CATEGORY</button>
+        <div class = "categories" id="category">
+            
+        </div>
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -51,6 +54,7 @@
                 <button type="button" id="submit">submit</button>
             </div>
         </div>
+
 
     </div>
 
