--- a/Blueprint/category.html
+++ b/Blueprint/category.html
@@ -34,7 +34,9 @@
     </table>
     <div class="category-box">
         <!-- Trigger/Open The Modal -->
-        <button id="myBtn">+CREATE CATEGORY</button>
+        <a id="myBtn">
+            <i class="fas fa-plus-square"></i>
+        </a>
         <div class = "categories" id="category">
             
         </div>
