everything is working, but abit buggy

--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -36,6 +36,7 @@
         <a class="myBtn">
             <i class="fas fa-folder-plus"></i>
         </a>
+        <button class="show-all">Show All content</button>
         <div class="category-container">
 
             <div class="category-cell">
