working checklist, now adding the delete button function

--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -43,8 +43,8 @@
                     <a href="#">vovlo</a>
                     <button>x</button>
                 </li>
-                <!-- <li><a href="#">vovlo2</a><button>x</button></li>
-                <li><a href="#">vovlo3</a><button>x</button></li> -->
+                <li><a href="#">vovlo2</a><button>x</button></li>
+                <li><a href="#">vovlo3</a><button>x</button></li>
             </ul>
         </div>
     </div>
