First commit for Esther changes

--- a/Blueprint/category.html
+++ b/Blueprint/category.html
@@ -12,6 +12,7 @@
 <body>
     <!-- HEADER -->
     <div class="header">
+        <img src="./img/guest-icon.jpg" class="guest-icon">
         <img id="close-icon" src="./img/delete.png">
         <img src="./img/Garage.png" class="garage-logo" />
     </div>
@@ -48,12 +49,12 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Input your category</h2>
+                <h2>Create a Folder...</h2>
             </div>
             <div class="modal-body">
-                <label for="fname">Category:</label>
+                <label for="fname">Folder name:</label>
                 <input type="text" id="fname" name="fname">
-                <button type="button" id="submit">submit</button>
+                <button type="button" id="submit">Create</button>
             </div>
         </div>
 
