--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>HOME</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/d60dc9f679.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="common.css" />
-    <link rel="stylesheet" type="text/css" href="home.css" />
-</head>
-
-<body>
-    <!-- HEADER -->
-    <div class="header">
-        <img id="close-icon" src="./img/delete.png">
-        <img src="./img/Garage.png" class="garage-logo" />
-    </div>
+    <head>
+        <title>HOME</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/d60dc9f679.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="common.css" />
+        <link rel="stylesheet" type="text/css" href="home.css" />
+    </head>
+    
+    <body>
+        <!-- HEADER -->
+        <div class="header">
+            <img src="./img/guest-icon.jpg" class="guest-icon">
+            <img id="close-icon" src="./img/delete.png">
+            <img src="./img/Garage.png" class="garage-logo" />
+        </div>
 
     <table class="section">
         <tr>
@@ -51,7 +52,6 @@
                 <div class="defination">
                     <h2>Definition</h2>
                     <p>
-                        explanation here
                     </p>
                 </div>
             </div>
@@ -61,7 +61,6 @@
                 <div class="defination">
                     <h2>Definition</h2>
                     <p>
-                        explanation here
                     </p>
                 </div>
     
