--- a/Blueprint/onboarding.html
+++ b/Blueprint/onboarding.html
@@ -23,16 +23,15 @@
             </div>
             <div class="column right" id="guide-text">
                 <h3>Search</h3>
-                <p>Look up definations,<br>synonyms, words<br>origins and <br>etymologies here</p>
-            </div>
+                <p>Look up definitions,<br>synonyms, words<br>origins and <br>etymologies.</p>            </div>
         </div>
         <div class="slide">
             <div class="column left">
                 <img src="img/news.PNG">
             </div>
             <div class="column right" id="guide-text">
-                <h3>Related Articles</h3>
-                <p>Find a list of articles<br>curated based on your<br>past reads here
+                <h3>Related<br> Articles</h3>
+                <p>Find a list of articles<br>curated based on your<br>search.
                 </p>
             </div>
         </div>
