--- a/Blueprint/relatedNews.html
+++ b/Blueprint/relatedNews.html
@@ -12,6 +12,7 @@
 <body>
     <!-- HEADER -->
     <div class="header">
+        <img src="./img/guest-icon.jpg" class="guest-icon">
         <img id="close-icon" src="./img/delete.png">
         <img src="./img/Garage.png" class="garage-logo" />
     </div>
@@ -44,7 +45,7 @@
                     <img >
                     <a class="headline-small" ></a>
                     <button class="add small margin-top" target="_blank"></button>
-                    </button>
+                </button>
                 </div>
                 <!-- <div class="tile">
                     <img src="${stories[1].img_src || placeholder}">
@@ -73,7 +74,8 @@
                     <img >
                     <a class="headline-small" ></a>
                     <button class="add small margin-top" target="_blank"></button>
-                    </button>
+                </button>
+
                 </div>
                 <!-- <div class="tile">
                     <img src="${stories[2].img_src || placeholder}">
