--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -12,6 +12,7 @@
 <body>
     <!-- HEADER -->
     <div class="header">
+        <img src="./img/guest-icon.jpg" class="guest-icon">
         <img id="close-icon" src="./img/delete.png">
         <img src="./img/Garage.png" class="garage-logo" />
     </div>
@@ -33,11 +34,10 @@
         </tr>
     </table>
     <div class="box">
-        <h2>VIEW: </h2>
         <div class="category-list">
             <input type="checkbox" id="A"/>
             <img src="./img/Arrow.png" class="arrow">
-            <label for="A">select items</label>
+            <label for="A">My Reading List</label>
             <ul class="cat-list">
                 <li>
                     <a href="#">vovlo</a>
@@ -57,12 +57,12 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Input your category</h2>
+                <h2>Create a New Folder</h2>
             </div>
             <div class="modal-body">
-                <label for="fname">Category:</label>
+                <label for="fname">New Folder:</label>
                 <input type="text" id="fname" name="fname">
-                <button type="button" id="submit">submit</button>
+                <button type="button" id="submit">Create</button>
             </div>
         </div>
     </div>
@@ -81,6 +81,7 @@
             <label for="item2">item2</label>
         </div> -->
     </div>
+    
 
 
     <!-- <script src="json/relatedNewsJson.js"></script> -->
