commented the last tab

--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -28,9 +28,9 @@
             <td><a class="button" href="#" id="checklist">
                 <img src="./img/icons/checklist.png" class="menu_image">
             </a></td>
-            <td><a class="button" href="#" id="my-folder">
+            <!-- <td><a class="button" href="#" id="my-folder">
                 <img src="./img/icons/myFolders.png" class="menu_image">
-            </a></td>
+            </a></td> -->
         </tr>
     </table>
     <div class="search-box">
