--- a/Blueprint/relatedNews.html
+++ b/Blueprint/relatedNews.html
@@ -21,12 +21,15 @@
         <tr>
             <td><a class="button" href="#" id="search">
                 <img src="./img/icons/search.png" class="menu_image">
+                <span class="tooltiptext">Search</span>
             </a></td>
             <td><a class="button" href="#" id="related-news">
                 <img src="./img/icons/relatedArticles.png" class="menu_image">
+                <span class="tooltiptext">Articles</span>
             </a></td>
             <td><a class="button" href="#" id="checklist">
                 <img src="./img/icons/checklist.png" class="menu_image">
+                <span class="tooltiptext">Checklist</span>
             </a></td>
             <!-- <td><a class="button" href="#" id="my-folder">
                 <img src="./img/icons/myFolders.png" class="menu_image">
