--- a/Blueprint/onboarding.html
+++ b/Blueprint/onboarding.html
@@ -41,7 +41,7 @@
                 <img src="img/checklist.PNG">
             </div>
             <div class="column right" id="guide-text">
-                <h3>Checklist</h3>
+                <h3>Reading List</h3>
                 <p>Add your favourite<br>articles here to read<br>at your own pace
                 </p>
             </div>
