Esther changes to the extension

--- a/Blueprint/category.html
+++ b/Blueprint/category.html
@@ -21,18 +21,25 @@
         <tr>
             <td><a class="button" href="#" id="search">
                 <img src="./img/icons/search.png" class="menu_image">
+                <p class="img-top">SEARCH</p>
+                <!-- <span class="tooltiptext">Search</span> -->
             </a></td>
             <td><a class="button" href="#" id="related-news">
                 <img src="./img/icons/relatedArticles.png" class="menu_image">
+                <p class="img-top">ARTICLES</p>
+                <!-- <span class="tooltiptext">Articles</span> -->
             </a></td>
             <td><a class="button" href="#" id="checklist">
                 <img src="./img/icons/checklist.png" class="menu_image">
+                <p class="img-top">READING LIST</p>
+                <!-- <span class="tooltiptext">Checklist</span> -->
             </a></td>
-            <td><a class="button" href="#" id="my-folder">
+            <!-- <td><a class="button" href="#" id="my-folder">
                 <img src="./img/icons/myFolders.png" class="menu_image">
-            </a></td>
+            </a></td> -->
         </tr>
     </table>
+    
     <div class="category-box">
         <!-- Trigger/Open The Modal -->
         <a id="myBtn">
