--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -20,21 +20,25 @@
     <table class="section">
         <tr>
             <td><a class="button" href="#" id="search">
-                    <img src="./img/icons/search.png" class="menu_image">
-                    <span class="tooltiptext">Search</span>
-                </a></td>
+                <img src="./img/icons/search.png" class="menu_image">
+                <p class="img-top">SEARCH</p>
+                <!-- <span class="tooltiptext">Search</span> -->
+            </a></td>
             <td><a class="button" href="#" id="related-news">
-                    <img src="./img/icons/relatedArticles.png" class="menu_image">
-                    <span class="tooltiptext">Articles</span>
-                </a></td>
+                <img src="./img/icons/relatedArticles.png" class="menu_image">
+                <p class="img-top">ARTICLES</p>
+                <!-- <span class="tooltiptext">Articles</span> -->
+            </a></td>
             <td><a class="button" href="#" id="checklist">
-                    <img src="./img/icons/checklist.png" class="menu_image">
-                    <span class="tooltiptext">Checklist</span>
-                </a></td>
+                <img src="./img/icons/checklist.png" class="menu_image">
+                <p class="img-top">READING LIST</p>
+                <!-- <span class="tooltiptext">Checklist</span> -->
+            </a></td>
             <!-- <td><a class="button" href="#" id="my-folder">
-                    <img src="./img/icons/myFolders.png" class="menu_image">
-                </a></td> -->
+                <img src="./img/icons/myFolders.png" class="menu_image">
+            </a></td> -->
         </tr>
+        
     </table>
     <div class="box">
         <div class="category-list">
