--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -74,6 +74,25 @@
         </div>
     </div>
 
+    <!-- social media modal -->
+    <div id="socialModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close" id="social_close">&times;</span>
+          <p>SHARE</p>
+          <ul>
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+
+
+          </ul>
+        </div>
+      
+      </div>
+
 
     <div class="search-box">
         <!-- <div class="item">
