Esther added the LOGO woo hoo

--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -14,24 +14,24 @@
         <div class="header">
             <img src="./img/guest-icon.jpg" class="guest-icon">
             <img id="close-icon" src="./img/delete.png">
-            <img src="./img/Garage.png" class="garage-logo" />
+            <img src="./img/seekr.png" class="garage-logo" />
         </div>
 
     <table class="section">
         <tr>
             <td><a class="button" href="#" id="search">
                 <img src="./img/icons/search.png" class="menu_image">
-                <p class="img-top">SEARCH</p>
+                <p class="img-top">Search</p>
                 <!-- <span class="tooltiptext">Search</span> -->
             </a></td>
             <td><a class="button" href="#" id="related-news">
                 <img src="./img/icons/relatedArticles.png" class="menu_image">
-                <p class="img-top">ARTICLES</p>
+                <p class="img-top">Articles</p>
                 <!-- <span class="tooltiptext">Articles</span> -->
             </a></td>
             <td><a class="button" href="#" id="checklist">
                 <img src="./img/icons/checklist.png" class="menu_image">
-                <p class="img-top">READING LIST</p>
+                <p class="img-top">Reading List</p>
                 <!-- <span class="tooltiptext">Checklist</span> -->
             </a></td>
             <!-- <td><a class="button" href="#" id="my-folder">
@@ -39,7 +39,7 @@
             </a></td> -->
         </tr>
     </table>
-    
+
     <div class="search-box">
         <h2>WHAT ARE YOU LOOKING FOR?</h2>
         <input class="search-txt" type="text" name="" placeholder="Type to search">
