--- a/Blueprint/checklist.html
+++ b/Blueprint/checklist.html
@@ -17,29 +17,30 @@
         <img src="./img/Garage.png" class="garage-logo" />
     </div>
 
+  
     <table class="section">
         <tr>
             <td><a class="button" href="#" id="search">
                 <img src="./img/icons/search.png" class="menu_image">
-                <p class="img-top">SEARCH</p>
+                <p class="img-top">Search</p>
                 <!-- <span class="tooltiptext">Search</span> -->
             </a></td>
             <td><a class="button" href="#" id="related-news">
                 <img src="./img/icons/relatedArticles.png" class="menu_image">
-                <p class="img-top">ARTICLES</p>
+                <p class="img-top">Articles</p>
                 <!-- <span class="tooltiptext">Articles</span> -->
             </a></td>
             <td><a class="button" href="#" id="checklist">
                 <img src="./img/icons/checklist.png" class="menu_image">
-                <p class="img-top">READING LIST</p>
+                <p class="img-top">Reading List</p>
                 <!-- <span class="tooltiptext">Checklist</span> -->
             </a></td>
             <!-- <td><a class="button" href="#" id="my-folder">
                 <img src="./img/icons/myFolders.png" class="menu_image">
             </a></td> -->
         </tr>
-        
     </table>
+
     <div class="box">
         <div class="category-list">
             <input type="checkbox" id="A"/>
