Esther change the title

--- a/Blueprint/onboarding.html
+++ b/Blueprint/onboarding.html
@@ -11,7 +11,7 @@
 
 <body>
     <img id="close-icon" src="./img/delete.png">
-    <img src="./img/Garage.png" class="garage-logo" />
+    <img src="./img/seekr.png" class="garage-logo" />
     <div class="slider">
         <div class="slide">
             <h1>Getting Started</h1>
