Esther changed the seekr garage logo

--- a/Blueprint/home.html
+++ b/Blueprint/home.html
@@ -14,7 +14,7 @@
         <div class="header">
             <img src="./img/guest-icon.jpg" class="guest-icon">
             <img id="close-icon" src="./img/delete.png">
-            <img src="./img/seekr.png" class="garage-logo" />
+            <img src="./img/seekr03.png" class="garage-logo" />
         </div>
 
     <table class="section">
